[gd_scene load_steps=6 format=3 uid="uid://cbhr66lkch43r"]

[ext_resource type="Script" path="res://Scripts/hint.gd" id="1_kcy0l"]
[ext_resource type="FontFile" uid="uid://5uxrw0gyq3k3" path="res://Assets/Fonts/Titles.otf" id="2_kry1v"]
[ext_resource type="Texture2D" uid="uid://bgiedb6qypwd5" path="res://Assets/Background/bedroom_light.png" id="3_0ebt1"]
[ext_resource type="FontFile" uid="uid://bc3l4mevhy1ow" path="res://Assets/Fonts/Body.otf" id="3_pya85"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_il6bb"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.498806, 0, 0.0565974, 1)
shadow_size = 50

[node name="Hint" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_right = 10.0
script = ExtResource("1_kcy0l")

[node name="GameOverUI" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="GameOverUI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -165.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.811617)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_il6bb")

[node name="Rows" type="VBoxContainer" parent="GameOverUI/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="CenterContainer" type="CenterContainer" parent="GameOverUI/PanelContainer/Rows"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverUI/PanelContainer/Rows/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="BlankSpace" type="Label" parent="GameOverUI/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kry1v")
theme_override_font_sizes/font_size = 100
text = "               "
horizontal_alignment = 1

[node name="Hint Menu" type="Label" parent="GameOverUI/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kry1v")
theme_override_font_sizes/font_size = 100
text = "HINT MENU"
horizontal_alignment = 1

[node name="BlankSpace2" type="Label" parent="GameOverUI/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kry1v")
theme_override_font_sizes/font_size = 50
text = "               "
horizontal_alignment = 1

[node name="ButtonDescription1" type="Label" parent="GameOverUI/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_pya85")
theme_override_font_sizes/font_size = 20
text = "Selecting this button will show you were to find all the items."
horizontal_alignment = 1

[node name="Hint_1" type="Button" parent="GameOverUI/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kry1v")
theme_override_font_sizes/font_size = 50
text = "Finding Items"

[node name="ButtonDescription2" type="Label" parent="GameOverUI/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_pya85")
theme_override_font_sizes/font_size = 20
text = "Selecting this button will show you the order of the items."
horizontal_alignment = 1

[node name="Hint_2" type="Button" parent="GameOverUI/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kry1v")
theme_override_font_sizes/font_size = 50
text = "Order"

[node name="Back" type="Button" parent="GameOverUI/PanelContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kry1v")
theme_override_font_sizes/font_size = 50
text = "BACK TO GAME"

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(559.366, 310.001)
scale = Vector2(0.284796, 0.293402)
texture = ExtResource("3_0ebt1")

[connection signal="pressed" from="GameOverUI/PanelContainer/Rows/CenterContainer/VBoxContainer/Hint_1" to="." method="_on_hint_1_pressed"]
[connection signal="pressed" from="GameOverUI/PanelContainer/Rows/CenterContainer/VBoxContainer/Hint_2" to="." method="_on_hint_2_pressed"]
[connection signal="pressed" from="GameOverUI/PanelContainer/Rows/CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
